hphp/hack/test/typecheck/coeffects/ctx-const-bounds_implicit-lower-defaults.php.exp
File "ctx-const-bounds_implicit-lower-defaults.php", line 9, characters 7-7:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "ctx-const-bounds_implicit-lower-defaults.php", line 8, characters 10-33:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
  File "ctx-const-bounds_implicit-lower-defaults.php", line 5, characters 38-38:
  But the function being called requires the capability <expr#2>::C
